--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ ol, ul {
     margin-bottom: 10px;
 }
 
-.square {
+.square,.square-winner {
     background: #fff;
     border: 1px solid #999;
     float: left;
@@ -30,6 +30,10 @@ ol, ul {
     padding: 0;
     text-align: center;
     width: 34px;
+}
+
+.square-winner {
+    background:green;
 }
 
 .square.focus {
